refactor code for security